--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,26 @@
-<p>about works!</p>
+<section class="about-section">
+    <h2 class="numbered-heading">About Me</h2>
+    <div class="inner">
+      <div class="about-text">
+        <p>
+          Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
+        </p>
+        <p>
+          Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
+        </p>
+        <p>
+          Here are a few technologies I've been working with recently:
+        </p>
+        <ul class="skills-list">
+          @for (skill of skills; track skill) {
+            <li>{{ skill }}</li>
+          }
+        </ul>
+      </div>
+      <div class="about-pic">
+        <div class="wrapper">
+          <img src="https://brittanychiang.com/static/30a645f7db6bd1a5e3b66e0f72654953/f9526/me.avif" alt="Brittany Chiang" />
+        </div>
+      </div>
+    </div>
+  </section>
