--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,10 +3,9 @@
     <div class="inner">
       <div class="about-text">
         <p>
-          Hello! My name is Brittany and I enjoy creating things that live on the internet. My interest in web development started back in 2012 when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
-        </p>
+          Hi, my name is Adam Rafraf Computer Engineering. I'm a fourth-year computer engineering student at ESPRIT, seeking a challenging summer internship. 
         <p>
-          Fast-forward to today, and I've had the privilege of working at an advertising agency, a start-up, a huge corporation, and a student-led design studio. My main focus these days is building accessible, inclusive products and digital experiences at Upstatement for a variety of clients.
+          With a passion for problem-solving and a strong foundation in programming, I'm eager to contribute to innovative projects and collaborate with dynamic teams.
         </p>
         <p>
           Here are a few technologies I've been working with recently:
@@ -19,7 +18,7 @@
       </div>
       <div class="about-pic">
         <div class="wrapper">
-          <img src="https://brittanychiang.com/static/30a645f7db6bd1a5e3b66e0f72654953/f9526/me.avif" alt="Brittany Chiang" />
+          <img src="https://brittanychiang.com/static/30a645f7db6bd1a5e3b66e0f72654953/f9526/me.avif" alt="Adam Rafraf" />
         </div>
       </div>
     </div>
