--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,5 @@
 <section class="contact-section">
-    <h2 class="numbere
-  
-  d-heading overline">What's Next?</h2>
+    <h2 class="numbere d-heading overline">What's Next?</h2>
     <h2 class="title">Get In Touch</h2>
     <p>
       epic gamer what can i say !
