--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,35 +1,37 @@
 <section class="experience-section">
   <h2 class="numbered-heading">Where I've Worked</h2>
+
   <div class="inner">
-    <div class="tab-list">
+    <div role="tablist" aria-label="Job tabs" class="job-tabs">
       @for (job of jobs; track job; let i = $index) {
-        <button
-          class="tab-button"
-          [class.active]="i === activeJobIndex"
-          (click)="setActiveJob(i)"
-        >
-          {{ job.company }}
-        </button>
+      <button class="job-tab" [class.active]="i === activeTabIndex" (click)="setActiveTab(i)" role="tab"
+        [attr.aria-selected]="i === activeTabIndex" [attr.aria-controls]="'panel-' + i" [id]="'tab-' + i">
+        <span>{{ job.company }}</span>
+      </button>
       }
     </div>
 
-    <div class="tab-panels">
-      @if (jobs[activeJobIndex]; as job) {
-        <div class="tab-panel">
-          <h3>
-            <span>{{ job.title }}</span>
-            <span class="company">
-              &nbsp;&nbsp;
-              <a href="#" class="inline-link">{{ job.company }}</a>
-            </span>
-          </h3>
-          <p class="range">{{ job.date }}</p>
-          <ul>
-            @for (responsibility of job.responsibilities; track responsibility) {
-              <li>{{ responsibility }}</li>
-            }
-          </ul>
-        </div>
+    <div class="job-panels">
+      @for (job of jobs; track job; let i = $index) {
+      @if (i === activeTabIndex) {
+      <div class="job-panel" role="tabpanel" [id]="'panel-' + i" [attr.aria-labelledby]="'tab-' + i">
+        <h3>
+          <span>{{ job.title }}</span>
+          <span class="company">
+            &nbsp;&#64;&nbsp;
+            <a [href]="job.url" class="inline-link">{{ job.company }}</a>
+          </span>
+        </h3>
+
+        <p class="range">{{ job.range }}</p>
+
+        <ul>
+          @for (item of job.responsibilities; track item) {
+          <li>{{ item }}</li>
+          }
+        </ul>
+      </div>
+      }
       }
     </div>
   </div>
