--- a/src/app/work/work.component.scss
+++ b/src/app/work/work.component.scss
@@ -1,345 +1,312 @@
 .work-section {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 100px 0;
-  }
-  
-  .numbered-heading {
-    display: flex;
-    align-items: center;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 100px 0;
+}
+
+.projects-grid {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  .project {
     position: relative;
-    margin: 10px 0 40px;
-    width: 100%;
-    font-size: clamp(26px, 5vw, 32px);
-    white-space: nowrap;
-  
-    &::before {
-      position: relative;
-      bottom: 4px;
-      counter-increment: section 1;
-      content: "0" counter(section) ".";
-      margin-right: 10px;
-      color: #64ffda;
-      font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-      font-size: clamp(16px, 3vw, 20px);
-      font-weight: 400;
-    }
-  
-    &::after {
-      content: "";
-      display: block;
-      position: relative;
-      top: -5px;
-      width: 300px;
-      height: 1px;
-      margin-left: 20px;
-      background-color: #233554;
-    }
-  }
-  
-  .projects-grid {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  
-    .project {
-      position: relative;
-      display: grid;
-      grid-gap: 10px;
-      grid-template-columns: repeat(12, 1fr);
-      align-items: center;
-  
-      &:not(:last-of-type) {
-        margin-bottom: 100px;
-  
-        @media (max-width: 768px) {
-          margin-bottom: 70px;
-        }
-  
-        @media (max-width: 480px) {
-          margin-bottom: 30px;
-        }
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(12, 1fr);
+    align-items: center;
+
+    &:not(:last-of-type) {
+      margin-bottom: 100px;
+
+      @media (max-width: 768px) {
+        margin-bottom: 70px;
       }
-  
-      &:nth-of-type(odd) {
-        .project-content {
-          grid-column: 7 / -1;
-          text-align: right;
-  
-          @media (max-width: 1080px) {
-            grid-column: 5 / -1;
-          }
-          @media (max-width: 768px) {
-            grid-column: 1 / -1;
-            padding: 40px 40px 30px;
-            text-align: left;
-          }
-          @media (max-width: 480px) {
-            padding: 25px 25px 20px;
-          }
-        }
-        .project-tech-list {
-          justify-content: flex-end;
-  
-          @media (max-width: 768px) {
-            justify-content: flex-start;
-          }
-  
-          li {
-            margin: 0 0 5px 20px;
-  
-            @media (max-width: 768px) {
-              margin: 0 10px 5px 0;
-            }
-          }
-        }
-        .project-links {
-          justify-content: flex-end;
-          margin-left: 0;
-          margin-right: -10px;
-  
-          @media (max-width: 768px) {
-            justify-content: flex-start;
-            margin-left: -10px;
-            margin-right: 0;
-          }
-        }
-        .project-image {
-          grid-column: 1 / 8;
-  
-          @media (max-width: 768px) {
-            grid-column: 1 / -1;
-          }
-        }
+
+      @media (max-width: 480px) {
+        margin-bottom: 30px;
       }
-  
+    }
+
+    &.reverse {
       .project-content {
-        position: relative;
-        grid-column: 1 / 7;
-        grid-row: 1 / -1;
-  
+        grid-column: 7 / -1;
+        text-align: right;
+
         @media (max-width: 1080px) {
-          grid-column: 1 / 9;
+          grid-column: 5 / -1;
         }
-  
         @media (max-width: 768px) {
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          height: 100%;
           grid-column: 1 / -1;
           padding: 40px 40px 30px;
-          z-index: 5;
+          text-align: left;
         }
-  
         @media (max-width: 480px) {
-          padding: 30px 25px 20px;
+          padding: 25px 25px 20px;
         }
       }
-  
-      .project-overline {
-        margin: 10px 0;
-        color: #64ffda;
-        font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-        font-size: 13px;
-        font-weight: 400;
-      }
-  
-      .project-title {
-        color: #ccd6f6;
-        font-size: clamp(24px, 5vw, 28px);
-  
-        @media (min-width: 768px) {
-          margin: 0 0 20px;
-        }
-  
-        @media (max-width: 768px) {
-          color: #e6f1ff;
-  
-          a {
-            position: static;
-  
-            &::before {
-              content: '';
-              display: block;
-              position: absolute;
-              z-index: 0;
-              width: 100%;
-              height: 100%;
-              top: 0;
-              left: 0;
-            }
-          }
-        }
-      }
-  
-      .project-description {
-        position: relative;
-        z-index: 2;
-        padding: 25px;
-        border-radius: 4px;
-        background-color: #112240;
-        color: #a8b2d1;
-        font-size: 18px;
-  
-        @media (max-width: 768px) {
-          padding: 20px 0;
-          background-color: transparent;
-          box-shadow: none;
-  
-          &:hover {
-            box-shadow: none;
-          }
-        }
-  
-        a {
-          display: inline-block;
-          text-decoration: none;
-          text-decoration-skip-ink: auto;
-          position: relative;
-          transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-          color: #64ffda;
-  
-          &:hover,
-          &:focus,
-          &:active {
-            color: #64ffda;
-            outline: 0;
-  
-            &::after {
-              width: 100%;
-            }
-          }
-  
-          &::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 1px;
-            position: relative;
-            bottom: 0.37em;
-            background-color: #64ffda;
-            transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-            opacity: 0.5;
-          }
-        }
-      }
-  
       .project-tech-list {
-        display: flex;
-        flex-wrap: wrap;
-        position: relative;
-        z-index: 2;
-        margin: 25px 0 10px;
-        padding: 0;
-        list-style: none;
-  
-        li {
-          margin: 0 20px 5px 0;
-          color: #a8b2d1;
-          font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
-          font-size: 13px;
-          white-space: nowrap;
-        }
-  
+        justify-content: flex-end;
+
         @media (max-width: 768px) {
-          margin: 10px 0;
-  
-          li {
+          justify-content: flex-start;
+        }
+
+        li {
+          margin: 0 0 5px 20px;
+
+          @media (max-width: 768px) {
             margin: 0 10px 5px 0;
-            color: #a8b2d1;
           }
         }
       }
-  
       .project-links {
-        display: flex;
-        align-items: center;
-        position: relative;
-        margin-top: 10px;
-        margin-left: -10px;
-        color: #a8b2d1;
-  
-        a {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          padding: 10px;
-  
-          &.external {
-            svg {
-              width: 22px;
-              height: 22px;
-              margin-top: -4px;
-            }
-          }
-  
-          svg {
-            width: 20px;
-            height: 20px;
-          }
+        justify-content: flex-end;
+        margin-left: 0;
+        margin-right: -10px;
+
+        @media (max-width: 768px) {
+          justify-content: flex-start;
+          margin-left: -10px;
+          margin-right: 0;
         }
       }
-  
       .project-image {
-        grid-column: 6 / -1;
-        grid-row: 1 / -1;
-        position: relative;
-        z-index: 1;
-  
+        grid-column: 1 / 8;
+
         @media (max-width: 768px) {
           grid-column: 1 / -1;
-          height: 100%;
-          opacity: 0.25;
         }
-  
+      }
+    }
+
+    .project-content {
+      position: relative;
+      grid-column: 1 / 7;
+      grid-row: 1 / -1;
+
+      @media (max-width: 1080px) {
+        grid-column: 1 / 9;
+      }
+
+      @media (max-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        grid-column: 1 / -1;
+        padding: 40px 40px 30px;
+        z-index: 5;
+      }
+
+      @media (max-width: 480px) {
+        padding: 30px 25px 20px;
+      }
+    }
+
+    .project-overline {
+      margin: 10px 0;
+      color: var(--green);
+      font-family: var(--font-mono);
+      font-size: var(--fz-xs);
+      font-weight: 400;
+    }
+
+    .project-title {
+      color: var(--lightest-slate);
+      font-size: clamp(24px, 5vw, 28px);
+
+      @media (min-width: 768px) {
+        margin: 0 0 20px;
+      }
+
+      @media (max-width: 768px) {
+        color: var(--white);
+
         a {
-          width: 100%;
-          height: 100%;
-          background-color: #64ffda;
-          border-radius: 4px;
-          vertical-align: middle;
-  
-          &:hover,
-          &:focus {
-            background: transparent;
-            outline: 0;
-  
-            &::before,
-            .img {
-              background: transparent;
-              filter: none;
-            }
-          }
-  
+          position: static;
+
           &::before {
             content: '';
+            display: block;
             position: absolute;
+            z-index: 0;
             width: 100%;
             height: 100%;
             top: 0;
             left: 0;
-            right: 0;
-            bottom: 0;
-            z-index: 3;
-            transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
-            background-color: #0a192f;
-            mix-blend-mode: screen;
-          }
-        }
-  
-        .img {
-          border-radius: 4px;
-          mix-blend-mode: multiply;
-          filter: grayscale(100%) contrast(1) brightness(90%);
-  
-          @media (max-width: 768px) {
-            object-fit: cover;
-            width: auto;
-            height: 100%;
-            filter: grayscale(100%) contrast(1) brightness(50%);
           }
         }
       }
     }
+
+    .project-description {
+      position: relative;
+      z-index: 2;
+      padding: 25px;
+      border-radius: var(--border-radius);
+      background-color: var(--light-navy);
+      color: var(--light-slate);
+      font-size: var(--fz-lg);
+
+      @media (max-width: 768px) {
+        padding: 20px 0;
+        background-color: transparent;
+        box-shadow: none;
+
+        &:hover {
+          box-shadow: none;
+        }
+      }
+
+      a {
+        display: inline-block;
+        text-decoration: none;
+        text-decoration-skip-ink: auto;
+        position: relative;
+        transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+        color: var(--green);
+
+        &:hover,
+        &:focus,
+        &:active {
+          color: var(--green);
+          outline: 0;
+
+          &::after {
+            width: 100%;
+          }
+        }
+
+        &::after {
+          content: '';
+          display: block;
+          width: 0;
+          height: 1px;
+          position: relative;
+          bottom: 0.37em;
+          background-color: var(--green);
+          transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+          opacity: 0.5;
+        }
+      }
+    }
+
+    .project-tech-list {
+      display: flex;
+      flex-wrap: wrap;
+      position: relative;
+      z-index: 2;
+      margin: 25px 0 10px;
+      padding: 0;
+      list-style: none;
+
+      li {
+        margin: 0 20px 5px 0;
+        color: var(--light-slate);
+        font-family: var(--font-mono);
+        font-size: var(--fz-xs);
+        white-space: nowrap;
+      }
+
+      @media (max-width: 768px) {
+        margin: 10px 0;
+
+        li {
+          margin: 0 10px 5px 0;
+          color: var(--lightest-slate);
+        }
+      }
+    }
+
+    .project-links {
+      display: flex;
+      align-items: center;
+      position: relative;
+      margin-top: 10px;
+      margin-left: -10px;
+      color: var(--lightest-slate);
+
+      a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 10px;
+
+        &.external {
+          svg {
+            width: 22px;
+            height: 22px;
+            margin-top: -4px;
+          }
+        }
+
+        svg {
+          width: 20px;
+          height: 20px;
+        }
+      }
+    }
+
+    .project-image {
+      grid-column: 6 / -1;
+      grid-row: 1 / -1;
+      position: relative;
+      z-index: 1;
+
+      @media (max-width: 768px) {
+        grid-column: 1 / -1;
+        height: 100%;
+        opacity: 0.25;
+      }
+
+      a {
+        width: 100%;
+        height: 100%;
+        background-color: var(--green);
+        border-radius: var(--border-radius);
+        vertical-align: middle;
+
+        &:hover,
+        &:focus {
+          background: transparent;
+          outline: 0;
+
+          &::before,
+          .img {
+            background: transparent;
+            filter: none;
+          }
+        }
+
+        &::before {
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          z-index: 3;
+          transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+          background-color: var(--navy);
+          mix-blend-mode: screen;
+        }
+      }
+
+      .img {
+        border-radius: var(--border-radius);
+        mix-blend-mode: multiply;
+        filter: grayscale(100%) contrast(1) brightness(90%);
+
+        @media (max-width: 768px) {
+          object-fit: cover;
+          width: auto;
+          height: 100%;
+          filter: grayscale(100%) contrast(1) brightness(50%);
+        }
+      }
+    }
   }
+}
