--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
   <div class="inner">
     <div class="about-text">
       <p>
-        Hello! My name is [Your Name] and I enjoy creating things that live on the internet. My interest in web development started back in [year] when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
+        Hello! My name is Adam Rafraf and I enjoy creating things that live on the internet. My interest in web development started back in [year] when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
       </p>
       <p>
         Fast-forward to today, and I've had the privilege of working at [an advertising agency/a start-up/a huge corporation/a student-led design studio]. My main focus these days is building accessible, inclusive products and digital experiences at [Company Name] for a variety of clients.
