--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <section class="home-section">
     <p class="greeting">Hi, my name is</p>
-    <h1 class="name">Brittany Chiang.</h1>
-    <h2 class="tagline">I build things for the web.</h2>
+    <h1 class="name">Adam Rafraf.</h1>
+    <h2 class="tagline">Computer Science Student.</h2>
     <p class="description">
       I'm a software engineer specializing in building (and occasionally designing) exceptional digital experiences. 
       Currently, I'm focused on building accessible, human-centered products at 
-      <a href="https://upstatement.com/" target="_blank" rel="noopener noreferrer">Upstatement</a>.
+      <a href="https://upstatement.com/" target="_blank" rel="noopener noreferrer">ESPRIT</a>.
     </p>
     <a href="#work" class="cta-button">Check out my work!</a>
   </section>
