--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
 <section class="home-section">
-    <p class="greeting">Hi, my name is</p>
-    <h1 class="name">Adam Rafraf.</h1>
-    <h2 class="tagline">Computer Science Student.</h2>
-    <p class="description">
-      I'm a software engineer specializing in building (and occasionally designing) exceptional digital experiences. 
-      Currently, I'm focused on building accessible, human-centered products at 
-      <a href="https://upstatement.com/" target="_blank" rel="noopener noreferrer">ESPRIT</a>.
-    </p>
-    <a href="#work" class="cta-button">Check out my work!</a>
-  </section>
+  <p class="greeting">Hi, my name is</p>
+  <h1 class="name">Adam Rafraf.</h1>
+  <h2 class="tagline">Final-Year Computer Engineering Student.</h2>
+  <p class="description">
+    I'm a passionate software engineer and game developer specializing in creating innovative and user-centric digital solutions. 
+    My expertise spans game development, full-stack web applications, and CI/CD pipelines. Currently, I'm focused on delivering impactful projects and refining my technical skills at 
+    <a href="https://esprit.tn" target="_blank" rel="noopener noreferrer">ESPRIT</a>.
+  </p>
+  <a href="#work" class="cta-button">Explore My Projects</a>
+</section>
