--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,10 +3,9 @@
   <div class="inner">
     <div class="about-text">
       <p>
-        Hello! My name is Adam Rafraf and I enjoy creating things that live on the internet. My interest in web development started back in [year] when I decided to try editing custom Tumblr themes — turns out hacking together a custom reblog button taught me a lot about HTML & CSS!
-      </p>
+        Hello! My name is Adam Rafraf, and I am a final-year Computer Engineering student specializing in game development, full-stack web applications, and <b>CI/CD</b> pipelines. </p>
       <p>
-        Fast-forward to today, and I've had the privilege of working at [an advertising agency/a start-up/a huge corporation/a student-led design studio]. My main focus these days is building accessible, inclusive products and digital experiences at [Company Name] for a variety of clients.
+        Over the years, I’ve worked on diverse projects ranging from immersive games and mobile apps to automated deployment systems. My passion lies in creating impactful, user-centric solutions by leveraging cutting-edge technologies like Unity, Unreal Engine, Angular, and Jenkins. 
       </p>
       <p>
         Here are a few technologies I've been working with recently:
