--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,16 +3,19 @@
   <div class="inner">
     <div class="about-text">
       <p>
-        Hello! My name is Adam Rafraf, and I am a final-year Computer Engineering student specializing in game development, full-stack web applications, and <b>CI/CD</b> pipelines. </p>
+        Hello! My name is Adam Rafraf, and I am a final-year Computer Engineering student specializing in game
+        development, full-stack web applications, and <b>CI/CD</b> pipelines. </p>
       <p>
-        Over the years, I’ve worked on diverse projects ranging from immersive games and mobile apps to automated deployment systems. My passion lies in creating impactful, user-centric solutions by leveraging cutting-edge technologies like Unity, Unreal Engine, Angular, and Jenkins. 
+        Over the years, I’ve worked on diverse projects ranging from immersive games and mobile apps to automated
+        deployment systems. My passion lies in creating impactful, user-centric solutions by leveraging cutting-edge
+        technologies like Unity, Unreal Engine, Angular, and Jenkins.
       </p>
       <p>
         Here are a few technologies I've been working with recently:
       </p>
       <ul class="skills-list">
         @for (skill of skills; track skill) {
-          <li>{{ skill }}</li>
+        <li>{{ skill }}</li>
         }
       </ul>
     </div>
