--- a/src/app/other-noteworthy-projects/other-noteworthy-projects.component.html
+++ b/src/app/other-noteworthy-projects/other-noteworthy-projects.component.html
@@ -1,34 +1,31 @@
-<section class="noteworthy-projects">
-  <h2 class="numbered-heading">Other Noteworthy Projects</h2>
-  <a [routerLink]="['/archive']" class="archive-link">view the archive</a>
-
-  <div class="projects-grid">
+<section class="other-projects">
+  <h2>Other Noteworthy Projects</h2>
+  <ul class="projects-grid">
     @for (project of projects; track project.title) {
-      <div class="project-card">
+      <li class="project-card">
         <div class="project-inner">
           <header>
             <div class="project-top">
-              <div class="folder">
-                <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 
-0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
+              <div class="folder-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-folder"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
               </div>
               <div class="project-links">
                 @if (project.githubLink) {
-                  <a [href]="project.githubLink" aria-label="GitHub Link" target="_blank" rel="noopener noreferrer">
+                  <a href="{{ project.githubLink }}" aria-label="GitHub Link" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
                   </a>
                 }
                 @if (project.externalLink) {
-                  <a [href]="project.externalLink" aria-label="External Link" target="_blank" rel="noopener noreferrer">
+                  <a href="{{ project.externalLink }}" aria-label="External Link" target="_blank" rel="noopener noreferrer">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                   </a>
                 }
               </div>
             </div>
-            <h3 class="project-title">
-              <a [href]="project.externalLink" target="_blank" rel="noopener noreferrer">{{ project.title }}</a>
-            </h3>
-            <div class="project-description">{{ project.description }}</div>
+            <h3 class="project-title">{{ project.title }}</h3>
+            <div class="project-description">
+              <p>{{ project.description }}</p>
+            </div>
           </header>
           <footer>
             <ul class="project-tech-list">
@@ -38,9 +35,9 @@
             </ul>
           </footer>
         </div>
-      </div>
+      </li>
     }
-  </div>
-
+  </ul>
+  <a routerLink="/archive" class="view-archive-button">View Archive</a>
 </section>
 
