--- a/src/app/other-noteworthy-projects/other-noteworthy-projects.component.scss
+++ b/src/app/other-noteworthy-projects/other-noteworthy-projects.component.scss
@@ -1,131 +1,195 @@
-.noteworthy-projects {
-  margin: 0 auto;
+.other-projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 100px 0;
-  max-width: 1000px;
+}
 
-  .numbered-heading {
-    font-size: clamp(26px, 5vw, 32px);
-    margin: 10px 0 20px;
+h2 {
+  font-size: var(--fz-heading);
+  margin-bottom: 50px;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 15px;
+  position: relative;
+  list-style: none;
+  padding: 0;
+  margin: 
+0;
+}
+
+.project-card {
+  position: relative;
+  cursor: default;
+  transition: var(--transition);
+}
+
+.project-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  height: 100%;
+  padding: 2rem 1.75rem;
+  border-radius: var(--border-radius);
+  background-color: var(--light-navy);
+  transition: var(--transition);
+
+  &:hover {
+    transform: translateY(-5px);
   }
+}
 
-  .archive-link {
-    font-family: var(--font-mono);
-    font-size: var(--fz-sm);
-    color: var(--green);
+.project-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 35px;
+}
 
-    &:hover,
-    &:focus {
-      text-decoration: underline;
+.folder-icon {
+  color: var(--green);
+  svg {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+.project-links {
+  display: flex;
+  align-items: center;
+  margin-right: -10px;
+  color: var(--light-slate);
+
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 7px;
+
+    svg {
+      width: 20px;
+      height: 20px;
     }
-  }
 
-  .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 15px;
-    margin-top: 50px;
-
-    .project-card {
-      position: relative;
-      cursor: default;
-      transition: var(--transition);
-
-      &:hover .project-inner {
-        transform: translateY(-5px);
-      }
-
-      .project-inner {
-        box-shadow: 0 10px 30px -15px var(--navy-shadow);
-        transition: var(--transition);
-        padding: 2rem 1.75rem;
-        background-color: var(--light-navy);
-        border-radius: var(--border-radius);
-        height: 100%;
-
-        header {
-          .project-top {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 35px;
-
-            .folder {
-              color: var(--green);
-
-              svg {
-                width: 40px;
-                height: 40px;
-              }
-            }
-
-            .project-links {
-              display: flex;
-              align-items: center;
-              gap: 10px;
-
-              a {
-                color: var(--light-slate);
-
-                svg {
-                  width: 20px;
-                  height: 20px;
-                }
-
-                &:hover {
-                  color: var(--green);
-                }
-              }
-            }
-          }
-        }
-
-        h3 {
-          margin: 0 0 10px;
-          color: var(--lightest-slate);
-          font-size: var(--fz-xxl);
-        }
-
-        .project-description {
-          color: var(--light-slate);
-          font-size: 17px;
-        }
-
-        footer {
-          .project-tech-list {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 20px;
-            list-style: none;
-
-            li {
-              font-family: var(--font-mono);
-              font-size: var(--fz-xxs);
-              line-height: 1.75;
-              margin-right: 15px;
-              color: var(--light-slate);
-            }
-          }
-        }
-      }
-    }
-  }
-
-  .more-button {
-    margin: 80px auto 0;
-    color: var(--green);
-    background: transparent;
-    border: 1px solid var(--green);
-    border-radius: var(--border-radius);
-    padding: 1.25rem 1.75rem;
-    font-size: var(--fz-sm);
-    font-family: var(--font-mono);
-    line-height: 1;
-    cursor: pointer;
-    transition: var(--transition);
-
-    &:hover,
-    &:focus {
-      background-color: var(--green-tint);
+    &:hover {
+      color: var(--green);
     }
   }
 }
+
+.project-title {
+  margin: 0 0 10px;
+  color: var(--lightest-slate);
+  font-size: var(--fz-xxl);
+}
+
+.project-description {
+  color: var(--light-slate);
+  font-size: 17px;
+
+  a {
+    display: inline-block;
+    text-decoration: none;
+    text-decoration-skip-ink: auto;
+    position: relative;
+    transition: var(--transition);
+    color: var(--green);
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: var(--green);
+      outline: 0;
+
+      &:after {
+        width: 100%;
+      }
+    }
+
+    &:after {
+      content: '';
+      display: block;
+      width: 0;
+      height: 1px;
+      position: relative;
+      bottom: 0.37em;
+      background-color: var(--green);
+      transition: var(--transition);
+      opacity: 0.5;
+    }
+  }
+}
+
+.project-tech-list {
+  display: flex;
+  align-items: flex-end;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  padding: 0;
+  margin: 20px 0 0 0;
+  list-style: none;
+
+  li {
+    font-family: var(--font-mono);
+    font-size: var(--fz-xxs);
+    line-height: 1.75;
+
+    &:not(:last-of-type) {
+      margin-right: 15px;
+    }
+  }
+}
+
+.more-button {
+  color: var(--green);
+  background-color: transparent;
+  border: 1px solid var(--green);
+  border-radius: var(--border-radius);
+  font-size: var(--fz-sm);
+  font-family: var(--font-mono);
+  line-height: 1;
+  text-decoration: none;
+  cursor: pointer;
+  transition: var(--transition);
+  padding: 1.25rem 1.75rem;
+  margin: 80px auto 0;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--green-tint);
+    outline: none;
+  }
+
+  &:after {
+    display: none !important;
+  }
+}
+
+.view-archive-button {
+  color: var(--green);
+  background-color: transparent;
+  border: 1px solid var(--green);
+  border-radius: var(--border-radius);
+  font-size: var(--fz-sm);
+  font-family: var(--font-mono);
+  line-height: 1;
+  text-decoration: none;
+  cursor: pointer;
+  transition: var(--transition);
+  padding: 1.25rem 1.75rem;
+  margin: 20px auto 0;
+  display: inline-block;
+
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--green-tint);
+    outline: none;
+  }
+}
+
